clusters/talos-ottawa/apps/media/app/radarr-1080p/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-1080p
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr-1080p
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr-1080p
    spec:
      containers:
      - name: radarr-1080p
        image: lscr.io/linuxserver/radarr:latest
        ports:
        - name: http
          containerPort: 7878
          protocol: TCP
        volumeMounts:
        - name: movies-volume
          mountPath: /movies
        - name: downloads-sabnzbd-volume
          mountPath: /downloads/sabnzbd
        - name: downloads-qbittorrent-volume
          mountPath: /downloads/qbittorrent
        - name: config-volume
          mountPath: /config
      volumes:
      - name: movies-volume
        persistentVolumeClaim:
          claimName: radarr-1080p-movies
      - name: downloads-sabnzbd-volume
        persistentVolumeClaim:
          claimName: sabnzbd-media
      - name: downloads-qbittorrent-volume
        persistentVolumeClaim:
          claimName: qbittorrent-downloads
      - name: config-volume
        persistentVolumeClaim:
          claimName: radarr-1080p-config
