clusters/talos-ottawa/apps/media/app/radarr-1080p/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-1080p
spec:
  selector:
    app: radarr-1080p
  ports:
  - name: http
    port: 7878
    protocol: TCP
    targetPort: 7878
  type: ClusterIP
